Fixed bearer scheme for swagger
